@@ -1,3 +1,14 @@
+2002-02-20  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03058] mailer
+	* NEWS: rc: mailer
+	* fm.h (Mailer): change default
+	* main.c (MAIN): $MAILER will be used as "mailer"
+	* main.c (followA): if "mailer" defined & simple mailto: URL, 
+		use mailer instead of w3mmail.cgi
+	* main.c (cmd_loadURL): ditto
+	* rc.c (params6): remove ifndef USE_W3MMAILER
+
 2002-02-15  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03056] DISPLAY_IMAGE, STOP_IMAGE don't work.
